rectifie some logical errors rectifie some logical errors such blinking of more than 3 small boxes at some situations and result not freezed when all small boxes are filled

--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <title>React App</title>
+    <link rel="stylesheet" href="./style.css" />
   </head>
 
   <body>
@@ -10,5 +11,6 @@
       You need to enable JavaScript to run this app.
     </noscript>
     <div id="root"></div>
+    <script src="../src/index.js"></script>
   </body>
 </html>
